--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>চিত্র স্বেচ্ছাসেবী সংস্থা</title>
+  <title>চিত্রা স্বেচ্ছাসেবী সংগঠণ</title>
   <style>
     body {
       font-family: 'Noto Sans Bengali', sans-serif;
@@ -201,7 +201,7 @@
   </section>
 
   <footer>
-    &copy; ২০২৫ চিত্র স্বেচ্ছাসেবী সংস্থা | সর্বস্বত্ব সংরক্ষিত
+    &copy; ২০২৫ চিত্রা স্বেচ্ছাসেবী সংগঠণ | সর্বস্বত্ব সংরক্ষিত
   </footer>
 
   <script>
