--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
       margin-top: 40px;
     }
   </style>
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js"></script>
+
 </head>
 <body>
   <header>
@@ -250,6 +254,23 @@
       response.style.color = "green";
       document.getElementById("aidForm").reset();
     });
+
+    // Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBsZbpQU4WzvaySRuOIVfKbPrl4TWgOJ-E",
+  authDomain: "chitraorg-c6c9d.firebaseapp.com",
+  projectId: "chitraorg-c6c9d",
+  storageBucket: "chitraorg-c6c9d.firebasestorage.app",
+  messagingSenderId: "165816182520",
+  appId: "1:165816182520:web:a80c29517ec5f1ba613d0d",
+  measurementId: "G-Q354B988GQ"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
+
   </script>
 </body>
 </html>
